<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeuEstiloActivity">

    <TextView
        android:id="@+id/tvEnunciado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/titulo_enunciado_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btIdentificoMuito"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginEnd="30dp"
        android:onClick="responder"
        android:text="@string/botao_respostas_identifico_muito"
        app:layout_constraintBottom_toBottomOf="@+id/btIdentifico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btIdentifico"
        app:layout_constraintTop_toTopOf="@+id/btIdentifico"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btIdentifico"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:onClick="responder"
        android:text="@string/botao_respostas_identifico"
        app:layout_constraintEnd_toStartOf="@+id/btIdentificoMuito"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNao" />

    <Button
        android:id="@+id/btNao"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:onClick="responder"
        android:text="@string/botao_respostas_nao"
        app:layout_constraintEnd_toStartOf="@+id/btRaramente"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnunciado" />

    <Button
        android:id="@+id/btRaramente"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="30dp"
        android:onClick="responder"
        android:text="@string/botao_respostas_raramente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btNao"
        app:layout_constraintTop_toBottomOf="@+id/tvEnunciado" />
</androidx.constraintlayout.widget.ConstraintLayout>